# microgpt-learning

./: .gitignore  README.md  microgpt.test.ts  microgpt_reference.py  package-lock.json  package.json  reference_values.json  tsconfig.json  turbo.json
benchmarks/: README.md  compare.sh  run.sh
c/: README.md  microgpt.c  test_microgpt.c
py/: benchmark.py  benchmark_json.py  microgpt.py
rust/: Cargo.toml  README.md
rust/src/: benchmark.rs  lib.rs  main.rs
ts-bun/: benchmark.ts  microgpt.ts  package.json  test_grad_debug.ts  test_grad_debug2.ts  test_init.ts  test_prng.ts  test_simple_grad.ts  test_training.ts
ts-bun/__tests__/: microgpt.test.ts
ts-node/: README.md  benchmark.ts  microgpt.ts  package-lock.json  package.json  tsconfig.json
ts-node/__tests__/: microgpt.test.ts
