[package]
name = "microgpt"
version = "0.1.0"
edition = "2021"
description = "The most atomic way to train and inference a GPT in pure Rust"

[[bin]]
name = "microgpt"
path = "src/main.rs"

[[bin]]
name = "benchmark"
path = "src/benchmark.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
